# vulncanix

./: Cargo.toml  README.md  vulnweb.json
src/: config.rs  main.rs
src/crawler/: endpoints.rs  engine.rs  mod.rs  normalizer.rs  processor.rs  queue.rs  types.rs
src/handler/: check.rs  http_client.rs
src/scanner/: autoscan.rs
