[package]
name = "vulncanix"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = { version = "2.4", features = ["serde"] }
indicatif = "0.17"
futures = "0.3"
colored = "2.0"
atty = "0.2"
sha2 = "0.10"
scraper = "0.16"
regex = "1.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "vulncanix"
path = "src/main.rs"